# pick_and_place_example

./: .gitmodules  README-EN.md  README.md
hsrb_pnp_ws/: launch_hsrb_pnp_ignition_gz.sh  start_hsrb_pick_and_place.sh  trigger_gaze.sh  trigger_pnp.sh
hsrb_pnp_ws/Doc/: README-EN.md  README.md
hsrb_pnp_ws/docker/: Dockerfile  cyclonedds_profile.xml  docker-compose.yaml
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pick_and_place/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pick_and_place/hsrb_pick_and_place/: hsrb_pick_and_place.py
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pick_and_place/launch/: hsrb_pnp_ignition_gz.launch.py
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pick_and_place/models/hsr_coke/: model-1_4.sdf
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pick_and_place/models/hsr_orange/: model-1_4.sdf
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pick_and_place/models/kitchen_lowtable/: model-1_4.sdf
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pick_and_place/models/kitchen_table/: model-1_4.sdf
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pick_and_place/models/radio/6/: model.sdf
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pick_and_place/worlds/: pp_demo_one_phone_standing.sdf
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pnp_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
hsrb_pnp_ws/src/hsrb_pnp_pkgs/hsrb_pnp_msgs/srv/: PnpTrigger.srv
yolox_ws/: check_grasp_result.sh  play_movie.sh  start_yolox_graspnet_ros.sh  stop_yolox_graspnet_ros.sh
yolox_ws/Doc/: README-EN.md  README.md
yolox_ws/docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
yolox_ws/src/yolox_bridge/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
yolox_ws/src/yolox_bridge/config/: blacklist.json
yolox_ws/src/yolox_bridge/launch/: yolox_bridge.launch.py
yolox_ws/src/yolox_bridge/yolox_bridge/: coco80_categories.json  coco_mapper.py  yolox_bridge_node.py
yolox_ws/src/yolox_graspnet_meta/: CHANGELOG.rst  CMakeLists.txt  package.xml
yolox_ws/src/yolox_ros_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
yolox_ws/src/yolox_ros_launch/launch/: yolox_onnxruntime_without_camera.launch.py
