<package format="3">
  <name>yolox_bridge</name>
  <version>2.0.0</version>
  <description>TODO: パッケージの説明</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>
  <license>BSD 3-clause Clear License</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>bboxes_ex_msgs</depend>
  <depend>instance_segmentation_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>